--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,14 @@
     <title>Portfolio | Ahmed's Portfolio</title>
 </head>
 
-<body></body>
+<body>
+    <nav>
+        <a href="/index.html">Home</a>
+        <a href="/portfolio.html">Portfolio</a>
+        <a href="/contact.html">Contact</a>
+        <a href="/blog.html">Blog</a>
+        <a href="/sitereport.html">Site Report</a>
+    </nav>
+</body>
 
 </html>
