--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
         <a href="/blog.html">Blog</a>
         <a href="/sitereport.html">Site Report</a>
     </nav>
+    <main></main>
 </body>
 
 </html>
