--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
         <a href="/sitereport.html" id="lastlink">Site Report</a>
         <a id="shownav"></a>
     </nav>
-    <main></main>
+    <main class="home-grid-container">
+        <h2 id="home-introduction">Hi, I'm</h2>
+        <span id="home-my-name" class="text-highlight">Ahmed</span>
+        <!-- using picsum for pictures, as i havent decided which pictures to add here yet -->
+        <img id="home-image" src="https://picsum.photos/400" />
+        <p id="home-description">
+            Welcome to my <span class="text-highlight">website development</span> portfolio website
+        </p>
+    </main>
 </body>
 
 </html>
