--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <h2 id="home-introduction">Hi, I'm</h2>
         <span id="home-my-name" class="text-highlight">Ahmed</span>
         <!-- using picsum for pictures, as i havent decided which pictures to add here yet -->
-        <img id="home-image" src="https://picsum.photos/400" />
+        <img id="home-image" src="https://picsum.photos/400" title="home-main image" />
         <p id="home-description">
-            Welcome to my <span class="text-highlight">website development</span> portfolio website
+            Welcome to my
+            <span class="text-highlight">website development</span> portfolio website
         </p>
     </main>
 </body>
