--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main class="home-grid-container">
         <h2 id="home-introduction">Hi, I'm</h2>
-        <span id="home-my-name" class="text-highlight">Ahmed</span>
+        <span id="home-my-name" class="text-highlight-home">Ahmed</span>
         <!-- using picsum for pictures, as i havent decided which pictures to add here yet -->
         <img id="home-image" src="https://picsum.photos/600" title="home-main image" />
         <p id="home-description">
