Contact me page

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,21 @@
         <a href="/sitereport.html" id="lastlink">Site Report</a>
         <a id="shownav"></a>
     </nav>
-    <main></main>
+    <main>
+        <fieldset>
+            <legend>Contact Information</legend>
+            <h1>My Name is: <span class="text-highlight">Ahmed</span></h1>
+            <h1>
+                My E-mail is:
+                <a href="mailto:ahmedgoloba@icloud.com" class="text-highlight">ahmedgoloba@icloud.com</a
+          >
+        </h1>
+        <h1>
+          My Github is:
+          <a href="https://github.com/A2BUSY" class="text-highlight">@A2BUSY</a>
+            </h1>
+        </fieldset>
+    </main>
 </body>
 
 </html>
