Added blog page Desktop

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,47 @@
         <a href="/sitereport.html" id="lastlink">Site Report</a>
         <a id="shownav"></a>
     </nav>
-    <main></main>
+    <main>
+        <article>
+            <h2>Useful VS Code extensions</h2>
+            <ul>
+                <li>
+                    <a href="https://marketplace.visualstudio.com/items?itemName=ms-edgedevtools.vscode-edge-devtools">Microsoft Edge Tools</a
+            >
+            - This extension, allows Microsoft Edge (and console) to be inside
+            VS Code, which minimises switching between browser and IDE to make
+            changes.
+          </li>
+          <li>
+            <a
+              href="https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-rename-tag"
+              >AutoRename Tag</a
+            >
+            - This extension, allows when changing the first HTML tag, it will
+            also automatically change the second one.
+          </li>
+          <li>
+            <a
+              href="https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode"
+              >Prettier</a
+            >
+            - This extension, automatically formats code.
+          </li>
+        </ul>
+      </article>
+      <article>
+        <h2>How to use angle brackets in text in HTML</h2>
+        <p>To use &lt; and &gt; brackets, we are required to type out either either &amp;lt; for "<" or &amp;gt; for ">" in our text, or another solution is to use the &lt;pre&gt; tag which means "preformatted"<blockquote><test></test></blockquote></p>
+      </article>
+      <article>
+        <h2>Useful References</h2>
+        <ol>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML">https://developer.mozilla.org/en-US/docs/Web/HTML</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">https://developer.mozilla.org/en-US/docs/Web/CSS</a></li>
+                <li><a href="https://caniuse.com/">https://caniuse.com/</a></li>
+                </ol>
+        </article>
+    </main>
 </body>
 
 </html>
