Blog grid layout

--- a/blog.html
+++ b/blog.html
@@ -18,8 +18,8 @@
         <a href="/sitereport.html" id="lastlink">Site Report</a>
         <a id="shownav"></a>
     </nav>
-    <main>
-        <article>
+    <main id="articleContainer">
+        <article id="article1">
             <h2>Useful VS Code extensions</h2>
             <ul>
                 <li>
@@ -46,11 +46,11 @@
           </li>
         </ul>
       </article>
-      <article>
+      <article id="article2">
         <h2>How to use angle brackets in text in HTML</h2>
         <p>To use &lt; and &gt; brackets, we are required to type out either either &amp;lt; for "<" or &amp;gt; for ">" in our text, or another solution is to use the &lt;pre&gt; tag which means "preformatted"<blockquote><test></test></blockquote></p>
       </article>
-      <article>
+      <article id="article3">
         <h2>Useful References</h2>
         <ol>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML">https://developer.mozilla.org/en-US/docs/Web/HTML</a></li>
