--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
         <a href="/portfolio.html">Portfolio</a>
         <a href="/contact.html">Contact</a>
         <a href="/blog.html">Blog</a>
-        <a href="/sitereport.html" id="lastlink">Site Report</a>
+        <a href="/sitereport.html">Site Report</a>
         <a id="shownav"></a>
     </nav>
     <main>
