adding mobile styles

--- a/blog.html
+++ b/blog.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
+    <input id="shownav" type="checkbox" title="Menu"></input>
     <nav>
         <a href="/index.html">Home</a>
         <a href="/portfolio.html">Portfolio</a>
         <a href="/contact.html">Contact</a>
         <a href="/blog.html">Blog</a>
         <a href="/sitereport.html">Site Report</a>
-        <a id="shownav"></a>
     </nav>
     <main>
         <article>
