Mobile pages complete

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,20 +20,21 @@
     </nav>
     <main>
         <div class="portfolio-grid-container">
-            <h2 class="portfolio-title-left">Project 1</h2>
-            <p class="portfolio-description-left">
+            <img class="portfolio-image" src="https://picsum.photos/400" title="image 1" />
+            <h2 class="portfolio-title">Project 1</h2>
+            <p class="portfolio-description">
                 This is the description for my
                 <span class="text-highlight">first project</span>
             </p>
-            <img class="portfolio-image-right" src="https://picsum.photos/400" title="image 1" />
         </div>
         <div class="portfolio-grid-container">
-            <h2 class="portfolio-title-right">Project 2</h2>
-            <p class="portfolio-description-right">
+            <img class="portfolio-image" src="https://picsum.photos/400" title="image 2" />
+
+            <h2 class="portfolio-title">Project 2</h2>
+            <p class="portfolio-description">
                 This is the description for my
                 <span class="text-highlight">second project</span>
             </p>
-            <img class="portfolio-image-left" src="https://picsum.photos/400" title="image 2" />
         </div>
     </main>
 </body>
