--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <input id="shownav" type="checkbox" title="Menu"></input>
+    <input id="shownav" type="checkbox" title="Menu" />
     <nav>
         <a href="/index.html">Home</a>
         <a href="/portfolio.html">Portfolio</a>
